main: Include missing header

https://bugzilla.gnome.org/show_bug.cgi?id=723065